Package/1.2.0/README.md
# Frost Ray's Bona-fide Skin Pack
### Description
Hey all you cool guys and gals, have I got a skin pack for you. In fact it's so cool, it only has ~~one~~ ~~two~~ three skins!

The pack currently adds one new skin to Bandit, one new skin to Mercenary, and one new skin to Huntress but hopefully I'll get to adding a few more - all of them green, of course.

### Skins

#### Bandit

![BanditScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/banditScreenshot.PNG?raw=true)

_Bushwhacked_

#### Mercenary

![MercenaryScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/mercenaryScreenshot.PNG?raw=true)

_Kitsune_

#### Huntress

![HuntressScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/huntressScreenshot.PNG?raw=true)

_Serpentine_

### Credits

Credit to [KingEnderBrine](https://thunderstore.io/package/KingEnderBrine/) for his great [skin-building guide](https://youtu.be/NzrVKDw-vq4) and intuitive toolkit, [RoRSkinBuilder](https://github.com/KingEnderBrine/RoRSkinBuilder). Highly recommend you check them out if you'd like to make your own skins!

### Changelog

 - `1.0.0`
    - Added Bandit _Bushwhacked_ skin
 - `1.1.0`
	 - Added Mercenary _Kitsune_ skin
 - `1.1.1`
	 - Updated the README and description
 - `1.1.2`
	 - Updated the resolution slightly on Merc's _Kitsune_ skin
 - `1.2.0`
	 - Added Huntress _Serpentine_ skin
	 - Fixed shadows on all skins