Package/1.2.3/README.md
# Frost Ray's Bona-fide Skin Pack
### Description
Hey all you cool guys and gals, have I got a skin pack for you. In fact it's so cool, it only has ~~one~~ ~~two~~ three skins!

The pack currently adds one new skin to Bandit, one new skin to Mercenary, and one new skin to Huntress but hopefully I'll get to adding a few more - all of them green, of course.

*NOTE: As of Version 1.2.3, skins should be compatible with Survivors of the Void

### Skins

#### Bandit

![BanditScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/banditScreenshot.PNG?raw=true)

_Bushwhacked_

#### Mercenary

![MercenaryScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/mercenaryScreenshot.PNG?raw=true)

_Kitsune_

#### Huntress

![HuntressScreenshot](https://github.com/jj-starrett/Image-Assets/blob/master/RoR2-Assets/huntressScreenshot.PNG?raw=true)

_Serpentine_

### Credits

Credit to [KingEnderBrine](https://thunderstore.io/package/KingEnderBrine/) for his great [skin-building guide](https://youtu.be/NzrVKDw-vq4) and intuitive toolkit, [RoRSkinBuilder](https://github.com/KingEnderBrine/RoRSkinBuilder). Highly recommend you check them out if you'd like to make your own skins!

### Feedback

If there's a skin idea you'd like to see, feel free to send me a PM on Reddit [@Frost_Ray](https://www.reddit.com/user/Frost_Ray/). Can't guarantee I'll get to it, but if I end up using your idea, I'll give you your very own mention in the credits - pretty exciting! 
Or, hey, if you've got some feedback on the existing skins - say, you were mauled by foxes as a young child and the sight of the _Kitsune_ skin is an affront to your being - feel free to let me know that too!

### Changelog

 - `1.0.0`
    - Added Bandit _Bushwhacked_ skin
 - `1.1.0`
	 - Added Mercenary _Kitsune_ skin
 - `1.1.1`
	 - Updated the README and description
 - `1.1.2`
	 - Updated the resolution slightly on Merc's _Kitsune_ skin
 - `1.2.0`
	 - Added Huntress _Serpentine_ skin
	 - Fixed shadows on all skins
 - `1.2.1`
	 - Updated Mercenary _Kitsune_ mask to be significantly more HD
 - `1.2.2`
	 - Fixed several texture issues with _Kitsune_ skin
	 - Updated the icon
 - `1.2.3`
	 - Hotfix to make compatible with Survivors of the Void Expansion
	 - BepInExPack dependency updated to 5.4.1902